upload/target/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'continue'", "'for'", "'do'", 
                     "'while'", "'if'", "'else'", "'return'", "'int'", "'void'", 
                     "'boolean'", "'float'", "'string'", "'=='", "'!='", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", 
                     "'!'", "'>'", "'<'", "'>='", "'<='", "'['", "']'", 
                     "'('", "')'", "'{'", "'}'", "';'", "','", "':'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'main'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "FOR", "DO", "WHILE", 
                      "IF", "ELSE", "RETURN", "INTTYPE", "VOIDTYPE", "BOOLEANTYPE", 
                      "FLOATTYPE", "STRINGTYPE", "EQUAL", "NOTEQUAL", "ASSIGN", 
                      "ADDOP", "MINUSOP", "MULOP", "DIVOP", "MODOP", "AND", 
                      "OR", "NOT", "LT", "ST", "LE", "SE", "LSB", "RSB", 
                      "LB", "RB", "LP", "RP", "SEMI", "COMMA", "COLON", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "BOOLLIT", "INTLIT", 
                      "FLOATLIT", "STRINGLIT", "ID", "MAIN", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_function_declare = 2
    RULE_parameter_decl = 3
    RULE_parameter_list = 4
    RULE_parameter = 5
    RULE_variable_declare = 6
    RULE_variables_list = 7
    RULE_variable = 8
    RULE_expression_list = 9
    RULE_array_input_parameter = 10
    RULE_array_output_pointer = 11
    RULE_array_pointer_type = 12
    RULE_primitive_type = 13
    RULE_function_type = 14
    RULE_statement = 15
    RULE_if_statement = 16
    RULE_no_else_if_statement = 17
    RULE_have_else_if_statement = 18
    RULE_dowhile_statement = 19
    RULE_for_statement = 20
    RULE_break_statement = 21
    RULE_continue_statement = 22
    RULE_return_statement = 23
    RULE_block_statement = 24
    RULE_block_stmts = 25
    RULE_expression_statement = 26
    RULE_operands = 27
    RULE_array_element = 28
    RULE_literal = 29
    RULE_funcall = 30
    RULE_expression = 31
    RULE_nonassoc_bool_expression = 32
    RULE_assoc_int_expression = 33

    ruleNames =  [ "program", "declaration", "function_declare", "parameter_decl", 
                   "parameter_list", "parameter", "variable_declare", "variables_list", 
                   "variable", "expression_list", "array_input_parameter", 
                   "array_output_pointer", "array_pointer_type", "primitive_type", 
                   "function_type", "statement", "if_statement", "no_else_if_statement", 
                   "have_else_if_statement", "dowhile_statement", "for_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "block_statement", "block_stmts", "expression_statement", 
                   "operands", "array_element", "literal", "funcall", "expression", 
                   "nonassoc_bool_expression", "assoc_int_expression" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    FOR=3
    DO=4
    WHILE=5
    IF=6
    ELSE=7
    RETURN=8
    INTTYPE=9
    VOIDTYPE=10
    BOOLEANTYPE=11
    FLOATTYPE=12
    STRINGTYPE=13
    EQUAL=14
    NOTEQUAL=15
    ASSIGN=16
    ADDOP=17
    MINUSOP=18
    MULOP=19
    DIVOP=20
    MODOP=21
    AND=22
    OR=23
    NOT=24
    LT=25
    ST=26
    LE=27
    SE=28
    LSB=29
    RSB=30
    LB=31
    RB=32
    LP=33
    RP=34
    SEMI=35
    COMMA=36
    COLON=37
    LINE_COMMENT=38
    BLOCK_COMMENT=39
    BOOLLIT=40
    INTLIT=41
    FLOATLIT=42
    STRINGLIT=43
    ID=44
    MAIN=45
    WS=46
    ERROR_CHAR=47
    UNCLOSE_STRING=48
    ILLEGAL_ESCAPE=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 68
                self.declaration()
                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.VOIDTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                    break

            self.state = 73
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declare(self):
            return self.getTypedRuleContext(MCParser.Function_declareContext,0)


        def variable_declare(self):
            return self.getTypedRuleContext(MCParser.Variable_declareContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.function_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.variable_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_type(self):
            return self.getTypedRuleContext(MCParser.Function_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def parameter_decl(self):
            return self.getTypedRuleContext(MCParser.Parameter_declContext,0)


        def block_statement(self):
            return self.getTypedRuleContext(MCParser.Block_statementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_function_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declare" ):
                return visitor.visitFunction_declare(self)
            else:
                return visitor.visitChildren(self)




    def function_declare(self):

        localctx = MCParser.Function_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.function_type()
            self.state = 80
            self.match(MCParser.ID)
            self.state = 81
            self.parameter_decl()
            self.state = 82
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(MCParser.Parameter_listContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_parameter_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_decl" ):
                return visitor.visitParameter_decl(self)
            else:
                return visitor.visitChildren(self)




    def parameter_decl(self):

        localctx = MCParser.Parameter_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameter_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MCParser.LB)
            self.state = 85
            self.parameter_list()
            self.state = 86
            self.match(MCParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MCParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_parameter_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = MCParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.INTTYPE, MCParser.BOOLEANTYPE, MCParser.FLOATTYPE, MCParser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.parameter()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MCParser.COMMA:
                    self.state = 89
                    self.match(MCParser.COMMA)
                    self.state = 90
                    self.parameter()
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [MCParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def array_input_parameter(self):
            return self.getTypedRuleContext(MCParser.Array_input_parameterContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = MCParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameter)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.primitive_type()
                self.state = 100
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.array_input_parameter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def variables_list(self):
            return self.getTypedRuleContext(MCParser.Variables_listContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_variable_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declare" ):
                return visitor.visitVariable_declare(self)
            else:
                return visitor.visitChildren(self)




    def variable_declare(self):

        localctx = MCParser.Variable_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.primitive_type()
            self.state = 106
            self.variables_list()
            self.state = 107
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variables_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VariableContext)
            else:
                return self.getTypedRuleContext(MCParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_variables_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariables_list" ):
                return visitor.visitVariables_list(self)
            else:
                return visitor.visitChildren(self)




    def variables_list(self):

        localctx = MCParser.Variables_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variables_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.variable()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 110
                self.match(MCParser.COMMA)
                self.state = 111
                self.variable()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = MCParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variable)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(MCParser.ID)
                self.state = 118
                self.match(MCParser.LSB)
                self.state = 119
                self.match(MCParser.INTLIT)
                self.state = 120
                self.match(MCParser.RSB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(MCParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MCParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_expression_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_list" ):
                return visitor.visitExpression_list(self)
            else:
                return visitor.visitChildren(self)




    def expression_list(self):

        localctx = MCParser.Expression_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expression_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.expression(0)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 125
                self.match(MCParser.COMMA)
                self.state = 126
                self.expression(0)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_input_parameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_array_input_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_input_parameter" ):
                return visitor.visitArray_input_parameter(self)
            else:
                return visitor.visitChildren(self)




    def array_input_parameter(self):

        localctx = MCParser.Array_input_parameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_input_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.primitive_type()
            self.state = 133
            self.match(MCParser.ID)
            self.state = 134
            self.match(MCParser.LSB)
            self.state = 135
            self.match(MCParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_output_pointerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_array_output_pointer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_output_pointer" ):
                return visitor.visitArray_output_pointer(self)
            else:
                return visitor.visitChildren(self)




    def array_output_pointer(self):

        localctx = MCParser.Array_output_pointerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_array_output_pointer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.primitive_type()
            self.state = 138
            self.match(MCParser.LSB)
            self.state = 139
            self.match(MCParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_pointer_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_input_parameter(self):
            return self.getTypedRuleContext(MCParser.Array_input_parameterContext,0)


        def array_output_pointer(self):
            return self.getTypedRuleContext(MCParser.Array_output_pointerContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_array_pointer_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_pointer_type" ):
                return visitor.visitArray_pointer_type(self)
            else:
                return visitor.visitChildren(self)




    def array_pointer_type(self):

        localctx = MCParser.Array_pointer_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_array_pointer_type)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.array_input_parameter()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.array_output_pointer()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTTYPE(self):
            return self.getToken(MCParser.INTTYPE, 0)

        def BOOLEANTYPE(self):
            return self.getToken(MCParser.BOOLEANTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(MCParser.FLOATTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MCParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_primitive_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = MCParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTTYPE) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTTYPE(self):
            return self.getToken(MCParser.INTTYPE, 0)

        def BOOLEANTYPE(self):
            return self.getToken(MCParser.BOOLEANTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(MCParser.FLOATTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MCParser.STRINGTYPE, 0)

        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def array_output_pointer(self):
            return self.getTypedRuleContext(MCParser.Array_output_pointerContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_function_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_type" ):
                return visitor.visitFunction_type(self)
            else:
                return visitor.visitChildren(self)




    def function_type(self):

        localctx = MCParser.Function_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_function_type)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(MCParser.INTTYPE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(MCParser.BOOLEANTYPE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.match(MCParser.FLOATTYPE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.match(MCParser.STRINGTYPE)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 151
